--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <head>
     <title>DEVOTION</title>
-
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    
 </head>
 
 <body>
