--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>DEVOTION</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
-    
+
 </head>
 
 <body>
@@ -11,5 +11,9 @@
 
     </header>
     <footer>
+        <div class="footer_page">
+            <img class="flogo" src="img/footer_logo.png"/>
+        </div>
+        
     </footer>
 </body>
