--- a/index.html
+++ b/index.html
@@ -11,9 +11,53 @@
 
     </header>
     <footer>
-        <div class="footer_page">
+        <div class="footer_logo">
             <img class="flogo" src="img/footer_logo.png"/>
         </div>
-        
+        <div class="footer_column">
+            <div class="footcol1">
+                <p class="footer_column_par">Customer Service</p>
+                <ul>
+                    <li><a href="payship.html" class="footer_a">Payment & Shipping</a></li>
+                    <li><a href="polinfo.html" class="footer_a">Policy & Information</a></li>
+                    <li><a href="contact.html" class="footer_a">Contact us</a></li>
+                    <li><a href="ordertracking.html" class="footer_a">Order trcaking</a></li>
+                    <li><a href="faq.html" class="footer_a">FAQ</a></li>
+                </ul>
+            </div>
+            <div class="footcol2">
+                <p class="footer_column_par">Payment & Shipping</p>
+                <ul>
+                    <li><a href="payship.html" class="footer_a">Payment & Shipping</a></li>
+                    <li><a href="polinfo.html" class="footer_a">Policy & Information</a></li>
+                    <li><a href="country.html" class="footer_a">Countries we ship to</a></li>
+                </ul>
+            </div>
+            <div class="footcol3">
+                <p class="footer_column_par">Policy & Information</p>
+                <ul>
+                    <li><a href="returnpol.html" class="footer_a">Return policy</a></li>
+                    <li><a href="privacy.html" class="footer_a">Privacy statement</a></li>
+                    <li><a href="condofuse.html" class="footer_a">Conditions of use</a></li>
+                </ul>
+            </div>
+            <div class="footcol4">
+                <p class="footer_column_par">Devotion</p>
+                <ul>
+                    <li><a href="about.html" class="footer_a">About us</a></li>
+                    <li><a href="partner.html" class="footer_a">Partnership</a></li>
+                    <li><a href="test.html" class="footer_a">Testimonials</a></li>
+                    <li><a href="pressrel.html" class="footer_a">Press release</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="social_buttons">
+            <a href="http://facebook.com/devotion" class="footer_social_a"><img src="img/facebook_button.png"/></a>
+            <a href="http://twitter.com/devotion" class="footer_social_a"><img src="img/twitter_button.png"/></a>
+            <a href="http://googleplus.com/devotion" class="footer_social_a"><img src="img/googleplus_button.png"/></a>
+            <a href="http://instagram.com/devotion" class="footer_social_a"><img src="img/instagram_button.png"/></a>
+            <a href="http://youtube.com/devotion" class="footer_social_a"><img src="img/youtube_button.png"/></a>
+            <a href="http://pinterest.com/devotion" class="footer_social_a"><img src="img/pinterest_button.png"/></a>
+        </div>
     </footer>
 </body>
