--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img class="flogo" src="img/footer_logo.png"/>
         </div>
         <div class="footer_column">
-            <div class="footcol1">
+            <div class="footcol">
                 <p class="footer_column_par">Customer Service</p>
                 <ul>
                     <li><a href="payship.html" class="footer_a">Payment & Shipping</a></li>
@@ -25,7 +25,7 @@
                     <li><a href="faq.html" class="footer_a">FAQ</a></li>
                 </ul>
             </div>
-            <div class="footcol2">
+            <div class="footcol">
                 <p class="footer_column_par">Payment & Shipping</p>
                 <ul>
                     <li><a href="payship.html" class="footer_a">Payment & Shipping</a></li>
@@ -33,7 +33,7 @@
                     <li><a href="country.html" class="footer_a">Countries we ship to</a></li>
                 </ul>
             </div>
-            <div class="footcol3">
+            <div class="footcol">
                 <p class="footer_column_par">Policy & Information</p>
                 <ul>
                     <li><a href="returnpol.html" class="footer_a">Return policy</a></li>
@@ -41,7 +41,7 @@
                     <li><a href="condofuse.html" class="footer_a">Conditions of use</a></li>
                 </ul>
             </div>
-            <div class="footcol4">
+            <div class="footcol">
                 <p class="footer_column_par">Devotion</p>
                 <ul>
                     <li><a href="about.html" class="footer_a">About us</a></li>
