--- a/index.html
+++ b/index.html
@@ -6,9 +6,39 @@
 
 </head>
 
-<body>
-    <header>
-
+<body class="devotion_body">
+    <header class="devotion_header">
+        <div class="dev_h">
+            <form class="form_country">
+                <div class="header_country">
+                    <span><p  class="hd_span">COUNTRY &nbsp; &nbsp;<input class="countries_list" list="countries"></p><span>
+                    <datalist id="countries">
+                        <option>CZECH REPUBLIC &nbsp; &nbsp; (EUR) &nbsp; &nbsp;</option>
+                        <option>POLAND &nbsp; &nbsp; (ZL) &nbsp; &nbsp;</option>
+                        <option>UKRAINE &nbsp; &nbsp; (UAH) &nbsp; &nbsp;</option>                       
+                    </datalist> 
+                </div>
+            </form>
+            <div class="header_delivery">
+                <a href="delivery.html" class="header_delivery_a">DELIVERY INFORMATION</a>
+            </div>
+        </div>
+        <div class="dev_h2">
+            <div class="header_logo">
+                <img class="header_logo_img" src="img/logo.png" />
+            </div>
+            <div class="header_search">
+            </div>
+            <div class="header_cart">
+                <img class="header_cart_img" src="img/cart_icon.png" />
+            </div>
+            <div class="header_like">
+            </div>
+            <div class="header_myacc">
+            </div>
+            <div class="header_login">
+            </div>
+        </div>
     </header>
     <footer>
         <div class="footer_logo">
