--- a/index.html
+++ b/index.html
@@ -39,6 +39,23 @@
             <div class="header_login">
             </div>
         </div>
+        <nav class="dev_nav_menu">
+            <ul class="dev_nav_menu_ul">
+                <li><a href="weddingdresses.html" class="header_a">WEDDING DRESSES</a></li>
+                 <!--   <i class="triangle"></i>
+                    <ul class="sub-nav">
+                        <li><a href="">Пункт 1 подменю</a></li>
+                        <li><a href="">Пункт 2 подменю</a></li>
+                        <li><a href="">Пункт 3 подменю</a></li>
+                        <li><a href="">Пункт 4 подменю</a></li>
+                    </ul> -->
+                <li><a href="odressesaccessories.html" class="header_a">OTHER DRESSES & ACCESSORIES</a></li>
+                <li><a href="hots.html" class="header_a">WHAT'S HOT</a></li>
+                <li><a href="hiw.html" class="header_a">HOW IT WORKS</a></li>
+                <li><a href="about.html" class="header_a">ABOUT DEVOTION</a></li>
+                <li><a href="contact.html" class="header_a">CONTACT US</a></li>
+            </ul>
+        </nav>
     </header>
     <footer>
         <div class="footer_logo">
