--- a/index.html
+++ b/index.html
@@ -41,14 +41,17 @@
         </div>
         <nav class="dev_nav_menu">
             <ul class="dev_nav_menu_ul">
-                <li><a href="weddingdresses.html" class="header_a">WEDDING DRESSES</a></li>
-                 <!--   <i class="triangle"></i>
+                 <i class="triangle"></i>
+                <li class="nav-menu__item">
+                    <a href="weddingdresses.html" class="header_a">WEDDING DRESSES</a>
                     <ul class="sub-nav">
                         <li><a href="">Пункт 1 подменю</a></li>
                         <li><a href="">Пункт 2 подменю</a></li>
                         <li><a href="">Пункт 3 подменю</a></li>
                         <li><a href="">Пункт 4 подменю</a></li>
-                    </ul> -->
+                    </ul>
+                </li>
+                    
                 <li><a href="odressesaccessories.html" class="header_a">OTHER DRESSES & ACCESSORIES</a></li>
                 <li><a href="hots.html" class="header_a">WHAT'S HOT</a></li>
                 <li><a href="hiw.html" class="header_a">HOW IT WORKS</a></li>
