--- a/index.html
+++ b/index.html
@@ -6,108 +6,141 @@
 
 </head>
 
-<body class="devotion_body">
-    <header class="devotion_header">
-        <div class="dev_h">
-            <form class="form_country">
-                <div class="header_country">
-                    <span><p  class="hd_span">COUNTRY &nbsp; &nbsp;<input class="countries_list" list="countries"></p><span>
-                    <datalist id="countries">
-                        <option>CZECH REPUBLIC &nbsp; &nbsp; (EUR) &nbsp; &nbsp;</option>
-                        <option>POLAND &nbsp; &nbsp; (ZL) &nbsp; &nbsp;</option>
-                        <option>UKRAINE &nbsp; &nbsp; (UAH) &nbsp; &nbsp;</option>                       
-                    </datalist> 
+<body class="body">
+    <header class="header">
+        <div class="header-block">
+            <div class="header-block-firstline">
+                <form class="header-block-firstline-form">
+                    <div class="header-block-firstline-form-country">
+                        <span class="header-block-firstline-form-country-span">
+                            <p  class="header-block-firstline-form-country-span__p">COUNTRY &nbsp; &nbsp;<input class="header-block-firstline-form-country-span__input" list="countries"></p>
+                        </span>
+                        <datalist id="countries">
+                            <option class="header-block-firstline-form-country-span__input_country">CZECH REPUBLIC &nbsp; &nbsp; (EUR) &nbsp; &nbsp;</option>
+                            <option class="header-block-firstline-form-country-span__input_country">POLAND &nbsp; &nbsp; (ZL) &nbsp; &nbsp;</option>
+                            <option class="header-block-firstline-form-country-span__input_country">UKRAINE &nbsp; &nbsp; (UAH) &nbsp; &nbsp;</option>                       
+                        </datalist> 
+                    </div>
+                </form>
+                <div class="header-block-firstline-delivery">
+                    <a href="delivery.html" class="header-block-firstline-delivery__link">DELIVERY INFORMATION</a>
                 </div>
-            </form>
-            <div class="header_delivery">
-                <a href="delivery.html" class="header_delivery_a">DELIVERY INFORMATION</a>
             </div>
-        </div>
-        <div class="dev_h2">
-            <div class="header_logo">
-                <img class="header_logo_img" src="img/logo.png" />
+            <div class="header-block-secondline">
+                <div class="header-block-secondline-logo">
+                    <img class="header-block-secondline-logo__img" src="img/logo.png" />
+                </div>
+                <div class="header-block-secondline-search">
+                </div>
+                <div class="header-block-secondline-cart">
+                    <img class="header-block-secondline-cart__img" src="img/cart_icon.png" />
+                </div>
+                <div class="header-block-secondline-like">
+                </div>
+                <div class="header-block-secondline-account">
+                </div>
+                <div class="header-block-secondline-login">
+                </div>
             </div>
-            <div class="header_search">
-            </div>
-            <div class="header_cart">
-                <img class="header_cart_img" src="img/cart_icon.png" />
-            </div>
-            <div class="header_like">
-            </div>
-            <div class="header_myacc">
-            </div>
-            <div class="header_login">
-            </div>
-        </div>
-        <nav class="dev_nav_menu">
-            <ul class="dev_nav_menu_ul">
-                 <i class="triangle"></i>
-                <li class="nav-menu__item">
-                    <a href="weddingdresses.html" class="header_a">WEDDING DRESSES</a>
-                    <ul class="sub-nav">
-                        <li><a href="">Пункт 1 подменю</a></li>
-                        <li><a href="">Пункт 2 подменю</a></li>
-                        <li><a href="">Пункт 3 подменю</a></li>
-                        <li><a href="">Пункт 4 подменю</a></li>
-                    </ul>
-                </li>
-                    
-                <li><a href="odressesaccessories.html" class="header_a">OTHER DRESSES & ACCESSORIES</a></li>
-                <li><a href="hots.html" class="header_a">WHAT'S HOT</a></li>
-                <li><a href="hiw.html" class="header_a">HOW IT WORKS</a></li>
-                <li><a href="about.html" class="header_a">ABOUT DEVOTION</a></li>
-                <li><a href="contact.html" class="header_a">CONTACT US</a></li>
-            </ul>
-        </nav>
+            <nav class="header-block-nav">
+                <ul class="header-block-nav__menu">
+                    <i class="header-block-nav__menu_triangl"></i>
+                    <li class="header-block-nav__menu_li">
+                        <a href="weddingdresses.html" class="header-block-nav__menu_li_link">WEDDING DRESSES</a>
+                        <ul class="header-block-nav__menu_subul">
+                            <li class="header-block-nav__menu_subul_li"><a href="" class="header-block-nav__menu_subul_li_link">Пункт 1 подменю</a></li>
+                            <li class="header-block-nav__menu_subul_li"><a href="" class="header-block-nav__menu_subul_li_link">Пункт 2 подменю</a></li>
+                            <li class="header-block-nav__menu_subul_li"><a href="" class="header-block-nav__menu_subul_li_link">Пункт 3 подменю</a></li>
+                            <li class="header-block-nav__menu_subul_li"><a href="" class="header-block-nav__menu_subul_li_link">Пункт 4 подменю</a></li>
+                        </ul>
+                    </li>
+                        
+                    <li class="header-block-nav__menu_li"><a href="odressesaccessories.html" class="header-block-nav__menu_li_link">OTHER DRESSES & ACCESSORIES</a></li>
+                    <li class="header-block-nav__menu_li"><a href="hots.html" class="header-block-nav__menu_li_link">WHAT'S HOT</a></li>
+                    <li class="header-block-nav__menu_li"><a href="hiw.html" class="header-block-nav__menu_li_link">HOW IT WORKS</a></li>
+                    <li class="header-block-nav__menu_li"><a href="about.html" class="header-block-nav__menu_li_link">ABOUT DEVOTION</a></li>
+                    <li class="header-block-nav__menu_li"><a href="contact.html" class="header-block-nav__menu_li_link">CONTACT US</a></li>
+                </ul>
+            </nav>
     </header>
-    <footer>
-        <div class="footer_logo">
-            <img class="flogo" src="img/footer_logo.png"/>
+    <footer class="footer">
+        <div class="footer-logo">
+            <img class="footer-logo__img" src="img/footer_logo.png"/>
         </div>
-        <div class="footer_column">
-            <div class="footcol">
-                <p class="footer_column_par">Customer Service</p>
-                <ul>
-                    <li><a href="payship.html" class="footer_a">Payment & Shipping</a></li>
-                    <li><a href="polinfo.html" class="footer_a">Policy & Information</a></li>
-                    <li><a href="contact.html" class="footer_a">Contact us</a></li>
-                    <li><a href="ordertracking.html" class="footer_a">Order trcaking</a></li>
-                    <li><a href="faq.html" class="footer_a">FAQ</a></li>
+        <div class="footer-main">
+            <div class="footer-main-column">
+                <p class="footer-main-column__p">Customer Service</p>
+                <ul class="footer-main-column__ul">
+                    <li class="footer-main-column__ul_li">
+                        <a href="payship.html" class="footer-main-column__ul_li_link">Payment & Shipping</a>
+                    </li>
+                    <li class="footer-main-column__ul_li">
+                        <a href="polinfo.html" class="footer-main-column__ul_li_link">Policy & Information</a>
+                    </li>
+                    <li class="footer-main-column__ul_li">
+                        <a href="contact.html" class="footer-main-column__ul_li_link">Contact us</a>
+                    </li>
+                    <li class="footer-main-column__ul_li">
+                        <a href="ordertracking.html" class="footer-main-column__ul_li_link">Order trcaking</a>
+                    </li>
+                    <li class="footer-main-column__ul_li">
+                        <a href="faq.html" class="footer-main-column__ul_li_link">FAQ</a>
+                    </li>
                 </ul>
             </div>
-            <div class="footcol">
-                <p class="footer_column_par">Payment & Shipping</p>
-                <ul>
-                    <li><a href="payship.html" class="footer_a">Payment & Shipping</a></li>
-                    <li><a href="polinfo.html" class="footer_a">Policy & Information</a></li>
-                    <li><a href="country.html" class="footer_a">Countries we ship to</a></li>
+            <div class="footer-main-column">
+                <p class="footer-main-column__p">Payment & Shipping</p>
+                <ul class="footer-main-column__ul">
+                    <li class="footer-main-column__ul_li">
+                        <a href="payship.html" class="footer-main-column__ul_li_link">Payment & Shipping</a>
+                    </li>
+                    <li class="footer-main-column__ul_li">
+                        <a href="polinfo.html" class="footer-main-column__ul_li_link">Policy & Information</a>
+                    </li>
+                    <li class="footer-main-column__ul_li">
+                        <a href="country.html" class="footer-main-column__ul_li_link">Countries we ship to</a>
+                    </li>
                 </ul>
             </div>
-            <div class="footcol">
-                <p class="footer_column_par">Policy & Information</p>
-                <ul>
-                    <li><a href="returnpol.html" class="footer_a">Return policy</a></li>
-                    <li><a href="privacy.html" class="footer_a">Privacy statement</a></li>
-                    <li><a href="condofuse.html" class="footer_a">Conditions of use</a></li>
+            <div class="footer-main-column">
+                <p class="footer-main-column__p">Policy & Information</p>
+                <ul class="footer-main-column__ul">
+                    <li class="footer-main-column__ul_li">
+                        <a href="returnpol.html" class="footer-main-column__ul_li_link">Return policy</a>
+                    </li>
+                    <li class="footer-main-column__ul_li">
+                        <a href="privacy.html" class="footer-main-column__ul_li_link">Privacy statement</a>
+                    </li>
+                    <li class="footer-main-column__ul_li">
+                        <a href="condofuse.html" class="footer-main-column__ul_li_link">Conditions of use</a>
+                    </li>
                 </ul>
             </div>
-            <div class="footcol">
-                <p class="footer_column_par">Devotion</p>
-                <ul>
-                    <li><a href="about.html" class="footer_a">About us</a></li>
-                    <li><a href="partner.html" class="footer_a">Partnership</a></li>
-                    <li><a href="test.html" class="footer_a">Testimonials</a></li>
-                    <li><a href="pressrel.html" class="footer_a">Press release</a></li>
+            <div class="footer-main-column">
+                <p class="footer-main-column__p">Devotion</p>
+                <ul class="footer-main-column__ul">
+                    <li class="footer-main-column__ul_li">
+                        <a href="about.html" class="footer-main-column__ul_li_link">About us</a>
+                    </li>
+                    <li class="footer-main-column__ul_li">
+                        <a href="partner.html" class="footer-main-column__ul_li_link">Partnership</a>
+                    </li>
+                    <li class="footer-main-column__ul_li">
+                        <a href="test.html" class="footer-main-column__ul_li_link">Testimonials</a>
+                    </li>
+                    <li class="footer-main-column__ul_li">
+                        <a href="pressrel.html" class="footer-main-column__ul_li_link">Press release</a>
+                    </li>
                 </ul>
             </div>
         </div>
-        <div class="social_buttons">
-            <a href="http://facebook.com/devotion" class="footer_social_a"><img src="img/facebook_button.png"/></a>
-            <a href="http://twitter.com/devotion" class="footer_social_a"><img src="img/twitter_button.png"/></a>
-            <a href="http://googleplus.com/devotion" class="footer_social_a"><img src="img/googleplus_button.png"/></a>
-            <a href="http://instagram.com/devotion" class="footer_social_a"><img src="img/instagram_button.png"/></a>
-            <a href="http://youtube.com/devotion" class="footer_social_a"><img src="img/youtube_button.png"/></a>
-            <a href="http://pinterest.com/devotion" class="footer_social_a"><img src="img/pinterest_button.png"/></a>
+        <div class="footer-social">
+            <a href="http://facebook.com/devotion" class="footer-social__link"><img  src="img/facebook_button.png" class="footer-social__link_img"/></a>
+            <a href="http://twitter.com/devotion" class="footer-social__link"><img src="img/twitter_button.png" class="footer-social__link_img"/></a>
+            <a href="http://googleplus.com/devotion" class="footer-social__link"><img src="img/googleplus_button.png" class="footer-social__link_img"/></a>
+            <a href="http://instagram.com/devotion" class="footer-social__link"><img src="img/instagram_button.png" class="footer-social__link_img"/></a>
+            <a href="http://youtube.com/devotion" class="footer-social__link"><img src="img/youtube_button.png" class="footer-social__link_img"/></a>
+            <a href="http://pinterest.com/devotion" class="footer-social__link"><img src="img/pinterest_button.png" class="footer-social__link_img"/></a>
         </div>
     </footer>
 </body>
