search like acc login put in menu

--- a/index.html
+++ b/index.html
@@ -31,15 +31,26 @@
                     <img class="header-block-secondline-logo__img" src="img/logo.png" />
                 </div>
                 <div class="header-block-secondline-search">
+                    <form action="/search" class="header-block-secondline-search__form">
+                        <div class="header-block-secondline-search__form-block">
+                            <div class="header-block-secondline-search__form-block__img">
+                                <img src="img/search_icon.png">
+                            </div>
+                            <p class="header-block-secondline-search__form-block__text"> Find your dress or order... </p>
+                        </div>
+                    </form>
                 </div>
                 <div class="header-block-secondline-cart">
                     <img class="header-block-secondline-cart__img" src="img/cart_icon.png" />
                 </div>
                 <div class="header-block-secondline-like">
+                    <img class="header-block-secondline-like__img" src="img/like_button.png" />
                 </div>
                 <div class="header-block-secondline-account">
+                    <img class="header-block-secondline-account__img" src="img/login_icon.png" />
                 </div>
                 <div class="header-block-secondline-login">
+                    <button class="header-block-secondline-login__button"><p>Login</p></button>
                 </div>
             </div>
             <nav class="header-block-nav">
