--- a/index.html
+++ b/index.html
@@ -74,6 +74,31 @@
                 </ul>
             </nav>
     </header>
+    <div class="prefooter">
+        <div class="prefooter-h">
+            <h1> Recently viewed </h1>
+        </div>
+        <div class="prefooret-i">
+            <div class="prefooter-imgarrowback">
+                <img src="img/photo1.png" class="prefooter-img__photo">
+            </div>
+            <div class="prefooter-img">
+                <img src="img/photo2.png" class="prefooter-img__photo">
+            </div>
+            <div class="prefooter-img">
+                <img src="img/photo3.png" class="prefooter-img__photo">
+            </div>
+            <div class="prefooter-img">
+                <img src="img/photo4.png" class="prefooter-img__photo">
+            </div>
+            <div class="prefooter-img">
+                <img src="img/photo5.png" class="prefooter-img__photo">
+            </div>
+            <div class="prefooter-imgarrowforward">
+                <img src="img/photo6.png" class="prefooter-img__photo">
+            </div>
+        </div>
+    </div>
     <footer class="footer">
         <div class="footer-logo">
             <img class="footer-logo__img" src="img/footer_logo.png"/>
