--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>DEVOTION</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
-
+    <link href="favicon.ico" rel="shortcut icon"/>
 </head>
 
 <body class="body">
@@ -74,6 +74,84 @@
                 </ul>
             </nav>
     </header>
+    <div class="mainbody">
+        <div class="mainbody-header">
+            <p class="mainbody-header__lpage"> <a href="index.html" class="mainbody-header__lpage__link">Devotion</a> > FAQ</p>
+            <h1 class="mainbody-header__h1">Welcome to the Devotion knowledge base</h1>
+            <p class="mainbody-header__lpage"> Here you can find answers to frequently asked questions.</p>
+        </div>
+        <div class="mainbody-navmenu-faqpage">
+            <div class="mainbody-navmenu">
+                <ul class="mainbody-navmenu__ul">
+                    <li class="mainbody-navmenu__ul_li"><a href=# class="mainbody-navmenu__ul_li_link">Order & Payment</a></li>
+                    <li class="mainbody-navmenu__ul_li"><a href=# class="mainbody-navmenu__ul_li_link">Shipping & Delivery</a></li>
+                    <li class="mainbody-navmenu__ul_li"><a href=# class="mainbody-navmenu__ul_li_link">Dresses & Measurement</a></li>
+                    <li class="mainbody-navmenu__ul_li"><a href=# class="mainbody-navmenu__ul_li_link">My Account</a></li>
+                    <li class="mainbody-navmenu__ul_li"><a href=# class="mainbody-navmenu__ul_li_link">Returns & Refunds</a></li>
+                </ul>
+            </div>
+            <div class="mainbody-faqpage">
+                <table class="mainbody-faqpage__table">
+                    <tr class="mainbody-faqpage__table_tr">
+                        <td class="mainbody-faqpage__table_tr_td">
+                            <ul class="mainbody-faqpage__table_tr_td_ul">
+                                <li class="mainbody-faqpage__table_tr_td_ul_li">ORDERS & PAYMENT</li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">What payment methods do you accept?</a></li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">What does my order status mean?</a></li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">How can I cancel my order?</a></li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">Can I make changes to my order?</a></li>
+                            </ul>
+                        </td>
+                        <td class="mainbody-faqpage__table_tr_td">
+                            <ul class="mainbody-faqpage__table_tr_td_ul">
+                                <li class="mainbody-faqpage__table_tr_td_ul_li">MY ACCOUNT</li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">Why should I create an account?</a></li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">I forgot my password</a></li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">How do I update my shipping and/or billing address?</a></li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">How do I write a review?</a></li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">How can I add favourites?</a></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr class="mainbody-faqpage__table_tr">
+                        <td class="mainbody-faqpage__table_tr_td">
+                            <ul class="mainbody-faqpage__table_tr_td_ul">
+                                <li class="mainbody-faqpage__table_tr_td_ul_li">DRESSES & MEASUREMENT</li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">How do I measure my size?</a></li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">What does custom-made mean?</a></li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">Can I modify my dress design in terms of colour/fabric/length?</a></li>
+                            </ul>
+                        </td>
+                        <td class="mainbody-faqpage__table_tr_td">
+                            <ul class="mainbody-faqpage__table_tr_td_ul">
+                                <li class="mainbody-faqpage__table_tr_td_ul_li">RETURNS & REFUNDS</li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">An item was lost or damaged during delivery</a></li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">What is the return policy?</a></li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">I have returned my item, how long before I receive my refund?</a></li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">What kind of guarantee does Devotion offer?</a></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr class="mainbody-faqpage__table_tr">
+                        <td class="mainbody-faqpage__table_tr_td">
+                            <ul class="mainbody-faqpage__table_tr_td_ul">
+                                <li class="mainbody-faqpage__table_tr_td_ul_li">SHIPPING & DELIVERY</li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">What shipping methods do you offer?</a></li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">What countries or regions does Devotion ship to?</a></li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">How long is the delivery time?</a></li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">How far in advance should I order my dress?</a></li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">How much will the delivery cost?</a></li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">Are there any additional fees?</a></li>
+                                <li class="mainbody-faqpage__table_tr_td_ul_li"><a href=# class="mainbody-faqpage__table_tr_td_ul_li_link">How can I track my order?</a></li>
+                            </ul>
+                        </td>
+                        <td class="mainbody-faqpage__table_tr_td">
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
     <div class="prefooter">
         <div class="prefooter-h">
             <h1> Recently viewed </h1>
@@ -81,6 +159,9 @@
         <div class="prefooter-i">
             <div class="prefooter-imgarrowback">
                 <img src="img/photo1.png" class="prefooter-img__photo">
+                <div class="prefooter-img__photo_del">
+                    <img src="img/prefooter_delimg2.png">
+                </div>
                 <p class="prefooter-img__par"> Wedding dresses </p>
                 <p class="prefooter-img__dis"> Maria </p>
                 <p class="prefooter-img__dis"> 540€ </p>
