--- a/index.html
+++ b/index.html
@@ -158,40 +158,55 @@
         </div>
         <div class="prefooter-i">
             <div class="prefooter-imgarrowback">
-                <img src="img/photo1.png" class="prefooter-img__photo">
-                <div class="prefooter-img__photo_del">
-                    <img src="img/prefooter_delimg2.png">
+                <div class="prefooter-img__photo">
+                    <span class="prefooter-img__photo_del"></span>
+                    <img src="img/photo1.png" class="prefooter-img__photoimg">
                 </div>
                 <p class="prefooter-img__par"> Wedding dresses </p>
                 <p class="prefooter-img__dis"> Maria </p>
                 <p class="prefooter-img__dis"> 540€ </p>
             </div>
             <div class="prefooter-img">
-                <img src="img/photo2.png" class="prefooter-img__photo">
+                <div class="prefooter-img__photo">
+                    <span class="prefooter-img__photo_del"></span>
+                    <img src="img/photo2.png" class="prefooter-img__photoimg">
+                </div>
                 <p class="prefooter-img__par"> Wedding dresses </p>
                 <p class="prefooter-img__dis"> Carla White Pearl </p>
                 <p class="prefooter-img__dis"> 540€ </p>
             </div>
             <div class="prefooter-img">
-                <img src="img/photo3.png" class="prefooter-img__photo">
+                <div class="prefooter-img__photo">
+                    <span class="prefooter-img__photo_del"></span>
+                    <img src="img/photo3.png" class="prefooter-img__photoimg">
+                </div>
                 <p class="prefooter-img__par"> Wedding dresses </p>
                 <p class="prefooter-img__dis"> Deezy Long </p>
                 <p class="prefooter-img__dis"> 560€ </p>
             </div>
             <div class="prefooter-img">
-                <img src="img/photo4.png" class="prefooter-img__photo">
+                <div class="prefooter-img__photo">
+                    <span class="prefooter-img__photo_del"></span>
+                    <img src="img/photo4.png" class="prefooter-img__photoimg">
+                </div>
                 <p class="prefooter-img__par"> Wedding dresses </p>
                 <p class="prefooter-img__dis"> Maria </p>
                 <p class="prefooter-img__dis"> 580€ </p>
             </div>
             <div class="prefooter-img">
-                <img src="img/photo5.png" class="prefooter-img__photo">
+                <div class="prefooter-img__photo">
+                    <span class="prefooter-img__photo_del"></span>
+                    <img src="img/photo5.png" class="prefooter-img__photoimg">
+                </div>
                 <p class="prefooter-img__par"> Wedding dresses </p>
                 <p class="prefooter-img__dis"> Carla White Pearl </p>
                 <p class="prefooter-img__dis"> 640€ </p>
             </div>
             <div class="prefooter-imgarrowforward">
-                <img src="img/photo6.png" class="prefooter-img__photo">
+                <div class="prefooter-img__photo">
+                    <span class="prefooter-img__photo_del"></span>
+                    <img src="img/photo6.png" class="prefooter-img__photoimg">
+                </div>
                 <p class="prefooter-img__par"> Bridesmaid’s dresses </p>
                 <p class="prefooter-img__dis"> Deezy Long </p>
                 <p class="prefooter-img__dis"> 580€ </p>
